--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <a class="brand" href="index.html">
         <img class="logo" src="logo.png" alt="Loply Chappal Logo" />
         <div class="brand-text">
-          <h1>Loply Chappal</h1>
+          <h1>Loply Chappal By Arnav Thapa And Krishal Raj Subedi</h1>
           <p>Loply • Ramro • Dami Dami Dami</p>
         </div>
       </a>
